--- a/Gunluk/Views/Home/Index.cshtml
+++ b/Gunluk/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@model List<Gonderi>
+﻿@model HomeViewModel
 @{
-    ViewData["Title"] =  ViewBag.Baslik ?? "Yazılarım";
-    //Sekme başlığını değiştirdik 
+    ViewData["Title"] = ViewBag.Baslik ?? "Yazılarım";
+    //Sekme başlığını değiştirdik
 }
 
 <h3 class="pb-4 mb-4 fst-italic border-bottom">
@@ -10,7 +10,7 @@
     @*@(ViewBag.Baslik??"Yazılarım") (Kısa yol) bu kısımda sadece ekrandaki başlık değiştirildi*@
 </h3>
 
-@foreach (var gonderi in Model)
+@foreach (var gonderi in Model.Gonderiler)
 {
     <article class="blog-post">
         <h2 class="blog-post-title mb-1">@gonderi.Baslik</h2>
@@ -19,3 +19,31 @@
 
     </article>
 }
+
+
+<nav class="blog-pagination" aria-label="Pagination">
+    @if (Model.EskisiVar)
+    {
+        <a class="btn btn-outline-primary rounded-pill" asp-route-sayfa="@(Model.Sayfa + 1)" asp-route-kategoriId="@(Model.KategoriId)">
+            Daha Eski
+        </a>
+    }
+    else
+    {
+        <a class="btn btn-outline-secondary rounded-pill disabled">
+            Daha Eski
+        </a>
+    }
+    @if (Model.YenisiVar)
+    {
+        <a class="btn btn-outline-primary rounded-pill" asp-route-sayfa="@(Model.Sayfa - 1)" asp-route-kategoriId="@(Model.KategoriId)">
+            Daha Yeni
+        </a>
+    }
+    else
+    {
+        <a class="btn btn-outline-secondary rounded-pill disabled">
+            Daha Yeni
+        </a>
+    }
+</nav>
